change file name

--- a/Web/custWeb_login.html
+++ b/Web/custWeb_login.html
@@ -13,12 +13,12 @@
             <div class="container">
                 <div class="nav">
                     <ul class = "nav-list">
+                        <li class="nav-menu"><a href="" class="nav-link">Login</a></li>
                         <li class="nav-menu"><a href="" class="nav-link">Check Info</a></li>
-<!--                        <li class="nav-menu"><a href="" class="nav-link">Item Info</a></li>-->
                     </ul>
                 </div>
                 <div class="content">
-                    <h2>Customer Information</h2>
+                    <h2>Login</h2>
                     <img src="/Users/soua/workspace/RobertoClemente_Server/Web/person.png" alt='Customer Img' class='fixed' width='180'>
                     <div class="info">
                         <br/>
