--- a/Web/dashboard.html
+++ b/Web/dashboard.html
@@ -13,18 +13,22 @@
 			</div>
 			<div class="main_Order">
 				<h2>Orders</h2>
-				<p>backlog</p>
-				<p>throughput</p>
-				<p>graph</p>
+				<p class="info">backlog</p>
+				<p class="info">throughput</p>
+				<p class="info">graph</p>
 			</div>
 			<div class="main_Robot">
 				<h2>Robot</h2>
-				<p>Remaining items on Inventory</p>
-				<p>Remaining items on Robot</p>
+				<p class="info">Remaining items on Inventory</p>
+				<p class="info">Remaining items on Robot</p>
 			</div>
 			<div class="main_Others">
 				<h2>Others</h2>
-				<p>Battery Time</p>
+				<p class="info">Battery Time</p>
 			</div>
+        </div>
+        <div class="footer">
+            <p class="copyright">&copy;Roberto Clemente</p>
+        </div>
 	</body>
 </html>
